Route config modified

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /FactoryDesignPattern/packages
 /FactoryDesignPattern/Web.CustomerClient/bin
 /FactoryDesignPattern/Web.CustomerClient/obj
+/FactoryDesignPattern/.vs/FactoryDesignPattern
